<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/dialogFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/game_pause"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <Button
            style="@style/dialogButton"
            android:id="@+id/terminate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/terminate"/>

        <Button
            style="@style/dialogButton"
            android:id="@+id/resume"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/resume"/>
    </LinearLayout>
</LinearLayout>
