<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:gravity="right">

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_participants"/>

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/global_highest_score"/>

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/my_highest_score"/>

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/my_rank"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/dialogFont"
                android:id="@+id/number_of_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/dialogFont"
                android:id="@+id/global_highest_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                style="@style/dialogFont"
                android:id="@+id/my_highest_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                style="@style/dialogFont"
                android:id="@+id/my_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <Button
            style="@style/dialogButton"
            android:id="@+id/start_game"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/start_game"/>

        <Button
            style="@style/dialogButton"
            android:id="@+id/go_back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_game"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:text="@string/go_back"/>
    </RelativeLayout>
</LinearLayout>
