<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="right">

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_highest_score"/>

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/current_score"/>

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/history_rank"/>

            <TextView
                style="@style/dialogFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/current_rank"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/dialogFont"
                android:id="@+id/history_highest_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/dialogFont"
                    android:id="@+id/current_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/dialogFont"
                    android:id="@+id/score_change_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <TextView
                style="@style/dialogFont"
                android:id="@+id/history_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/dialogFont"
                    android:id="@+id/current_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/dialogFont"
                    android:id="@+id/rank_change_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/dialogFont"
        android:id="@+id/game_over_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="wweqwe"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="40dp">

        <Button
            style="@style/dialogButton"
            android:id="@+id/play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"/>

        <Button
            style="@style/dialogButton"
            android:id="@+id/go_to_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/main_activity"/>
    </LinearLayout>
</LinearLayout>
