<?xml version="1.0" encoding="utf-8"?>
<!--
	主菜单界面

	author:yao
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_of_menu"
    android:weightSum="6"
    android:orientation="vertical">
    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/menu_ll_top"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:weightSum="7"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/menu_btn_how_to_play"
                android:id="@+id/menu_iv_how_to_play"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="5"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/menu_btn_setting"
                android:id="@+id/menu_iv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="2"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:layout_weight="2"
        android:id="@+id/menu_ll_middle_selsct"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/game_color"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/menu_bt_colors" />
            <Button
                android:text="@string/game_digit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/menu_bt_digits"/>
            <Button
                android:text="@string/game_word"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/menu_bt_words"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/menu_ll_bottom"
        android:weightSum="6"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="5"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:src="@mipmap/menu_btn_exit"
                android:id="@+id/menu_iv_exit"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

